syntax = "proto3";

option csharp_namespace = "OtusClasses";

import "google/protobuf/timestamp.proto";

package dialogs;

service Dialogs { 
	rpc SendMessage(MessageRequest) returns (MessageReply);
	rpc GetMessages(DialogRequest) returns (DialogReply);
}

message MessageRequest { 
	string from = 1;
	string to = 2;
	string message = 3;
}

message MessageReply { 
	string id = 1;
	string from = 2;
	string to = 3;
	string message = 4;
	google.protobuf.Timestamp timestamp = 5;
}

message DialogRequest { 
	string userId = 1;
	string correspondentId = 2;
}

message DialogReply { 
	message DialogMessage {
        string from = 1;
		string to = 2;
		string message = 3;
		google.protobuf.Timestamp timestamp = 4;
    }
	repeated DialogMessage messages = 1;
}